# raxpy

./: .gitignore  README.md  coverage.json  pyproject.toml  requirements.txt  strach_pad.py
.github/workflows/: python-package.yml  unit_tests.yml
examples/: California_Housing_NAS_HPO.ipynb  California_Housing_NAS_Optuna_HPO.ipynb  Simple_Experiment_Demonstration.ipynb  Study_Experiment_Design_Generation copy.ipynb  Study_Experiment_Design_Generation.ipynb  api_walkthrough.ipynb  design_concepts.drawio  hierarchical_hyperparameter_search.py  mixture.py  simple.py
raxpy/: __init__.py  decorators.py  execute.py  spec.py
raxpy/adapters/: config_space.py  hyperopt.py  optuna.py
raxpy/annotations/: __init__.py  function.py  function_spec.py  mixture.py  type_spec.py  values.py
raxpy/does/: assess.py  doe.py  full_sub_spaces.py  lhs.py  lhs_r_adapters.py  maxpro.py  measure.py  plots.py  projected_lhs.py  random.py  revise.py  scipy_optimizations.py  sobol.py
raxpy/runners/: local_sequntial.py  mpi.py
raxpy/searches/: lhs.py  maxpro.py  random.py
raxpy/spaces/: __init__.py  complexity.py  dim_tags.py  dimensions.py  root.py  simple_constraints.py
raxpy/types/: base.py  flags.py  mixture.py
tests/: test_basic_api.py  test_basic_types.py
tests/adapters/: test_cs.py
tests/annotations/: test_parameter_mapping.py  test_union_parameters.py
tests/does/: test_creation_of_space_filling_doe.py  test_design_measurements.py  test_maxpro_oh_optimization.py  test_random_data_point_creation.py  test_value_pool.py
tests/exploration/: test_design_assessment.py  (+4 more)
(+12 files in other folders)
