[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "raxpy"
authors = [
    {name = "Neil Ranly", email = "neil.ranly@gmail.com"},
]
description = ""
readme = "README.rst"
requires-python = ">=3.9"
keywords = ["experimentation", "synthetic data", "optimization", "model specification"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.9"',
]
dynamic = ["version"]

[tool.black]
line-length = 79